<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.paul.log_in.Main2Activity">

    <LinearLayout
        android:id="@+id/layoutAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:gravity="center"
            android:labelFor="@+id/txtInfo"
            android:text="@string/entrer_votre_pseudo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/viewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusedByDefault="true"
            android:foregroundGravity="center"
            android:gravity="center"
            android:inputType="text"
            android:labelFor="@+id/txtorder"
            android:selectAllOnFocus="true"
            android:text="@string/pseudo" tools:targetApi="o" />

        <Button
            android:id="@+id/btnAddPlayer"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/com_facebook_button_background"
            android:elevation="10dp"
            android:text="Button"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/page_2" />

</LinearLayout>
